--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="hello">Hello World, Main!</string>
     <string name="app_name">Rhizome Retriever</string>
+    <string name="m_import">Import</string>
+    <string name="m_new_keys">KeyGen</string>
 </resources>
